kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-namespace
  labels:
    name: app-namespace
